# cavaii

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: bar.toml  colors.toml  config.toml  wave.toml
assets/themes/: ayu-dark.toml  catppuccin-mocha.toml  dracula.toml  everforest.toml  gruvbox.toml  nord.toml  rose-pine.toml  tokyo-night.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  logging.rs  notify.rs  spectrum.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  main.rs  process.rs
crates/engine/: Cargo.toml
crates/engine/src/: live.rs  pipeline.rs
crates/engine/src/live/: cava.rs  dummy.rs  mod.rs
crates/engine/tests/: perf_benchmark.rs
crates/overlay/: Cargo.toml
crates/overlay/src/: app.rs  main.rs
crates/overlay/src/ui/: gpu_widget.rs  layer.rs  mod.rs  style.rs
