[workspace]
members = ["crates/common", "crates/daemon", "crates/engine", "crates/overlay"]
default-members = ["crates/daemon", "crates/engine", "crates/overlay"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.1"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
unwrap_used = "deny"
